--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name = config-client
-spring.cloud.config.uri = http://localhost:3000
-server.port = 3050
+spring.cloud.config.uri = config-server-v1-1-0-0-snapshot/config-server/v1
+server.port = 8080
