--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name = config-client
-spring.cloud.config.uri = https://config-server-v1-1-0-0-snapshot-ag-pssg-is-dev.pathfinder.gov.bc.ca/config-server/v1/config-client/default
+spring.cloud.config.uri = https://config-server-v1-1-0-0-snapshot:8080/config-server/v1/config-client/default
 server.port = 8080
