--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
 spring.application.name = config-client
-spring.cloud.config.uri = https://config-server-v1-1-0-0-snapshot:8080/config-server/v1/config-client/default
+spring.cloud.config.uri = https://config-server-v1-1-0-0-snapshot:8080/config-server/v1
